[ADD] 유틸리티 타입 1. partial 2. pick

--- a/quiz/1_todo/tsconfig.json
+++ b/quiz/1_todo/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": { // 타입스트맄트 -> 자바스크립트 변환 세부사항
     "allowJs": true,
     "checkJs": true,
-    "noImplicitAny": true
+    "noImplicitAny": false
   },
   "include": ["./src/**/*"]
 }
